<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_margin="0dp"
android:layout_marginTop="0dp"
tools:context=".ui.AddFarmerFragment">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txt_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/add_farmer"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_heading"
        app:srcCompat="@android:drawable/btn_star_big_on" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtf_f_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/contorl_margin"
        android:hint="@string/f_name"
        android:padding="@dimen/contorl_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_f_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtf_m_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/contorl_margin"
        android:hint="@string/m_name"
        android:padding="@dimen/contorl_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtf_f_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_m_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtf_l_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/contorl_margin"
        android:hint="@string/l_name"
        android:padding="@dimen/contorl_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtf_m_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_l_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtf_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/contorl_margin"
        android:hint="@string/title"
        android:padding="@dimen/contorl_padding"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtf_l_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textAutoComplete|textAutoCorrect" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtf_gender"
        android:layout_width="@dimen/same_line_controls"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/contorl_margin"
        android:hint="@string/gender"
        android:padding="@dimen/contorl_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/txtf_l_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtf_dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/contorl_margin"
        android:hint="@string/dob"
        android:padding="@dimen/contorl_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtf_gender">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtf_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/contorl_margin"
        android:hint="@string/phone"
        android:padding="@dimen/contorl_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtf_dob">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtf_phone2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/contorl_margin"
        android:hint="@string/phone"
        android:padding="@dimen/contorl_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtf_phone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_phone2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtf_district"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/contorl_margin"
        android:hint="@string/district"
        android:padding="@dimen/contorl_padding"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtf_phone2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_district"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textAutoComplete|textAutoCorrect" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtf_county"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/contorl_margin"
        android:hint="@string/county"
        android:padding="@dimen/contorl_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/txtf_phone2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_county"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textAutoComplete|textAutoCorrect" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtf_s_county"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/contorl_margin"
        android:hint="@string/s_county"
        android:padding="@dimen/contorl_padding"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtf_district">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_s_county"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textAutoComplete|textAutoCorrect" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtf_parish"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/contorl_margin"
        android:hint="@string/parish"
        android:padding="@dimen/contorl_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/txtf_county">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_parish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textAutoComplete|textAutoCorrect" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtf_village"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/contorl_margin"
        android:hint="@string/village"
        android:padding="@dimen/contorl_padding"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtf_s_county">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_village"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textAutoComplete|textAutoCorrect" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtf_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/contorl_margin"
        android:hint="@string/group"
        android:padding="@dimen/contorl_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/txtf_parish">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textAutoComplete|textAutoCorrect" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtf_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/contorl_margin"
        android:hint="@string/password"
        android:padding="@dimen/contorl_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtf_village">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtf_password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/contorl_margin"
        android:hint="@string/c_password"
        android:padding="@dimen/contorl_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtf_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/elevatedButton"
        style="@style/CustomeElevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_container"
        android:hint="@string/password"
        android:padding="@dimen/contorl_padding"
        android:text="@string/save"
        android:textSize="@dimen/content_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtf_password2"
        app:layout_constraintVertical_bias="1.0" />




</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>